Opened 13 months ago
Closed 13 months ago
#18752 closed bug (fixed)
IOM document MIME type doesn't return supported apps
Reported by: | humdinger | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta5 |
Component: | Servers/registrar | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev57502, 64bit.
I noticed that ShowImage doesn't populate the "Open with..." menu when viewing Icon-O-Matic icons.
I wrote a small test app that calls GetSupportingApps() on the "application/x-vnd.Haiku-icon" MIME type and prints out the MIME type and the returned BMessage. It's attached.
The output is:
MimeType application/x-vnd.Haiku-icon BMessage('rgrz') { be:sub = int32(0x0 or 0) be:super = int32(0x0 or 0) result = int32(0x0 or 0) }
So zero supported apps, which signatures would normally be added in "applications" string fields to the BMessage.
Attachments (2)
Change History (6)
by , 13 months ago
comment:1 by , 13 months ago
It appears that it works with lower-case "Haiku", so "application/x-vnd.haiku-icon".
So either change the MIME type in the database, or - there has to be some comparison somewhere - do the comparison case-insensitive.
RFC2045 says:
The type, subtype, and parameter names are not case sensitive.
Hints?
comment:2 by , 13 months ago
The type is declared as "Haiku-icon" everywhere but in ShowImage's RDEF: https://xref.landonf.org/source/search?q=%22Haiku-icon%22&defs=&refs=&path=&hist=&type=&project=haiku
So, if it's declared that way in ShowImage, then something must already be doing case-insensitive comparison. But since IOM lists it capitalized, then something else must be happening here.
comment:4 by , 13 months ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
source