src/servers/registrar/MIMEManager.cpp
@@ -180,10 +180,11 @@ MIMEManager::MessageReceived(BMessage *message)
 
 		case B_REG_MIME_GET_SUPPORTING_APPS:
 		{
-			const char *type;
+			BString type;
 			err = message->FindString("type", &type);
+
 			if (!err)
-				err = fDatabase.GetSupportingApps(type, &reply);
+				err = fDatabase.GetSupportingApps(type.ToLower(), &reply);
 
 			reply.what = B_REG_RESULT;
 			reply.AddInt32("result", err);
